Dramatically reduce cpu usage of lru bitmap pool
No longer need to iterate over linked list to
find individual entries